--- a/sass/main.scss
+++ b/sass/main.scss
@@ -68,8 +68,8 @@ footer {
 }
 
 // Smartphones responsive
-@media screen and (max-width: 600px) {
-}
+// @media screen and (max-width: 600px) {
+// }
 
 // Butt shake on click
 // @keyframes shake {
