dark mode enabled

--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@ body {
       margin: 1rem 0 0 0.5rem; }
   body .main {
     height: 83vh; }
-    body .main h3 {
-      padding: 1rem; }
+    body .main .click-instruction {
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between; }
     body .main .butt-container {
       display: flex;
       justify-content: space-around;
@@ -40,3 +42,34 @@ footer {
   padding: 0.5rem; }
   footer i {
     color: red; }
+
+input[type='checkbox'] {
+  cursor: pointer;
+  position: relative;
+  width: 40px;
+  height: 20px;
+  -webkit-appearance: none;
+  background: #c6c6c6;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s; }
+
+input:checked[type='checkbox'] {
+  background: #03a9f4; }
+
+input[type='checkbox']:before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  top: 0;
+  left: 0;
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s; }
+
+input:checked[type='checkbox']:before {
+  left: 20px; }
